[package]
name = "sonyflake"
version = "0.2.0"
authors = ["Arne Bahlo <hallo@arne.me>"]
license = "MIT OR Apache-2.0"
description = "A distributed unique ID generator inspired by Twitter's Snowflake"
repository = "https://github.com/bahlo/sonyflake-rs"
readme = "README.md"
keywords = ["sonyflake", "snowflake", "random", "id", "generator"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pnet = "0.35"
thiserror = "1.0"
time = { version = "0.3.36", features = ["macros"] }
